tests/fixtures/invalid/pow_bytes_set_float.py
# Cannot call pow() with Bytes, Set[int], Float
x = pow(b"hello", {1, 2, 3}, 1.0)
